--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+  "version": 2,
+   "name":"kizerr-api",
+  "builds": [
+    {
+      "src":"index.js",
+      "use":"@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src":"/(.*)",
+      "dest":"/server.js"
+    }
+  ]
 }
