--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fiverrapi",
+  "name": "kizerrapi",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,7 +7,6 @@
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
