--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
-    "version":2,
-    "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
-  }
+  "version": 2,
+  "name": "kizerr app",
+  "builds": [
+     { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+     { "src": "/(.*)", "dest": "/index.js" }
+  ]
+}
